# libmochi

./: .gitmodules  .swiftformat  CODING_GUIDELINES.md  Cargo.toml  LibMochiClient.podspec  README.md  RELEASE.md  SECURITY.md  TESTING.md
.github/: FUNDING.yml  stale.yml
.github/workflows/: build_and_test.yml  ios_artifacts.yml  jni_artifacts.yml  npm.yml  slow_tests.yml
acknowledgments/: README.md  acknowledgments.html  acknowledgments.html.hbs  acknowledgments.md  acknowledgments.md.hbs  acknowledgments.plist  acknowledgments.plist.hbs
java/: Dockerfile  Makefile  build.gradle  build_jni.sh  check_code_size.py  license_header.txt  settings.gradle
java/android/: build.gradle
java/android/benchmarks/: build.gradle
java/client/: build.gradle  proguard-usage.txt.expected
java/server/: build.gradle
node/: .eslintrc.js  Dockerfile  Native.d.ts  Native.js  binding.gyp  build_node_bridge.py  docker-prebuildify.sh  package.json  zkgroup.d.ts  zkgroup.js
node/ts/: Address.ts  Errors.ts  MessageBackup.ts  Minidump.ts  Mp4Sanitizer.ts  SealedSenderMultiRecipientMessage.ts  WebpSanitizer.ts  incremental_mac.ts  index.ts  io.ts  net.ts  usernames.ts
node/ts/bench/: GroupSendEndorsement-receiveWithCiphertexts.ts  GroupSendEndorsement-receiveWithServiceIds.ts  GroupSendEndorsement-toToken.ts
node/ts/test/: BridgingTest.ts  Cds2Test.ts  FutureTest.ts  HsmEnclaveTest.ts  IncrementalMacTest.ts  MediaSanitizerTest.ts  MessageBackupTest.ts  MinidumpTest.ts  NetTest.ts  PublicAPITest.ts  SealedSenderServerAPI.ts  UsernamesTest.ts  ZKGroup-test.ts  ioutil.ts  util.ts
node/ts/zkgroup/: GenericServerPublicParams.ts  GenericServerSecretParams.ts  NotarySignature.ts  ServerPublicParams.ts  ServerSecretParams.ts  index.ts
rust/attest/: Cargo.toml  build.rs
rust/attest/src/: cds2.rs  cert_chain.rs  client_connection.rs  constants.rs  dcap.rs  enclave.rs  endian.rs  error.rs  expireable.rs  hsm_enclave.rs  ias.rs  lib.rs  nitro.rs  proto.rs  sgx_session.rs  snow_resolver.rs  svr2.rs  tpm2snp.rs  util.rs
rust/attest/tests/: hsm_enclave.rs
rust/bridge/ffi/: Cargo.toml  README.md  cbindgen.toml
rust/bridge/ffi/src/: lib.rs  logging.rs
rust/bridge/jni/: Cargo.toml  README.md  build.rs  cbindgen.toml
rust/bridge/node/: Cargo.toml  build.rs
rust/bridge/node/futures/: Cargo.toml
rust/bridge/node/futures/benches/: node.rs
rust/bridge/node/futures/src/: exception.rs  executor.rs  future.rs  lib.rs  promise.rs  result.rs  util.rs
rust/bridge/node/futures/src/future/: builder.rs
rust/bridge/node/futures/tests/: node.rs  util.rs
rust/bridge/node/futures/tests-node-module/: Cargo.toml
rust/bridge/node/futures/tests-node-module/src/: lib.rs  panics_and_throws.rs  store_like.rs
rust/bridge/node/futures/tests/node-tests/: bench.js  package.json
rust/bridge/node/futures/tests/node-tests/test/: basic.js
rust/bridge/shared/: Cargo.toml  build.rs
rust/bridge/shared/types/: Cargo.toml
rust/bridge/shared/types/src/: cds2.rs  crypto.rs  hsm_enclave.rs  incremental_mac.rs  io.rs  lib.rs  message_backup.rs  net.rs  protocol.rs  sgx_session.rs  zkgroup.rs
rust/bridge/shared/types/src/ffi/: chat.rs  convert.rs  error.rs  futures.rs  io.rs  mod.rs  storage.rs
rust/bridge/shared/types/src/jni/: args.rs  class_lookup.rs  convert.rs  error.rs  futures.rs  io.rs  mod.rs  storage.rs
rust/bridge/shared/types/src/net/: cdsi.rs  chat.rs  tokio.rs
rust/bridge/shared/types/src/node/: chat.rs  convert.rs  error.rs  futures.rs  io.rs  mod.rs  storage.rs
rust/bridge/shared/types/src/support/: as_type.rs  mod.rs  sequences.rs  serialized.rs  transform_helper.rs
rust/core/: Cargo.toml
rust/core/src/: address.rs  lib.rs  version.rs
rust/crypto/: Cargo.toml
rust/crypto/benches/: aes_gcm.rs
rust/crypto/src/: aes_cbc.rs  aes_ctr.rs  aes_gcm.rs  error.rs  hash.rs  lib.rs
rust/crypto/tests/: aes_ctr.rs  aes_gcm.rs
rust/device-transfer/: Cargo.toml
rust/device-transfer/src/: lib.rs
rust/device-transfer/tests/: tests.rs
rust/media/: Cargo.toml
rust/media/src/: lib.rs  sanitize.rs
rust/message-backup/: Cargo.toml  build.rs
rust/message-backup/examples/: binproto_to_json.rs  decrypt_backup.rs  encrypt_backup.rs  json_to_binproto.rs
rust/message-backup/macros/: Cargo.toml
rust/message-backup/src/: args.rs  backup.rs  frame.rs  key.rs  lib.rs  parse.rs  proto.rs  unknown.rs
rust/message-backup/tests/: test_cases.rs
rust/net/: Cargo.toml  build.rs
rust/net/examples/: cdsi_lookup.rs  chat_smoke_test.rs  dns_custom_lookup.rs  dns_over_https.rs  dns_over_udp.rs  svr3.rs  svr3_2xsgx.rs  svr3_prop_test.rs
rust/net/res/: mochi.cer
rust/net/src/: auth.rs  cdsi.rs  chat.rs  enclave.rs  env.rs  infra.rs  lib.rs  proto.rs  svr.rs  svr3.rs  utils.rs
rust/pin/: Cargo.toml
rust/pin/benches/: hash.rs
rust/pin/src/: error.rs  hash.rs  lib.rs
rust/poksho/: Cargo.toml
rust/poksho/benches/: sho.rs
rust/poksho/src/: args.rs  errors.rs  lib.rs  proof.rs  scalar.rs  shoapi.rs  shohmacsha256.rs  shosha256.rs  sign.rs  simple_types.rs  statement.rs
rust/protocol/: Cargo.toml  build.rs
rust/protocol/benches/: curve.rs  kem.rs  ratchet.rs  sealed_sender.rs  session.rs
rust/protocol/cross-version-testing/: Cargo.toml
rust/protocol/cross-version-testing/src/: current.rs  lib.rs  v12.rs  v21.rs
rust/protocol/cross-version-testing/tests/: session.rs
rust/protocol/examples/: kem.rs
rust/protocol/fuzz/: Cargo.toml
rust/protocol/src/: consts.rs  crypto.rs  curve.rs  error.rs  fingerprint.rs  group_cipher.rs  identity_key.rs  incremental_mac.rs  kem.rs  lib.rs  proto.rs  protocol.rs  ratchet.rs  sealed_sender.rs  sender_keys.rs  session.rs  session_cipher.rs  state.rs  storage.rs  (+2 more)
rust/svr3/: Cargo.toml  build.rs
rust/usernames/: Cargo.toml  build.rs
rust/zkcredential/: Cargo.toml
rust/zkgroup/: Cargo.toml
swift/: .swiftlint.yml  Package.swift  README.md  build_ffi.sh  verify_error_codes.sh
swift/Benchmarks/: Package.swift
(+723 files in other folders)
