#
# Copyright (C) 2020-2021 Mochi Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "libmochi-ffi"
version = "0.52.1"
authors = ["Mochi Messenger LLC"]
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "mochi_ffi"
crate-type = ["staticlib"]

[features]
# Testing the Swift side of this requires compiling with MOCHI_MEDIA_SUPPORTED enabled for both Swift and C:
#     swift test -Xswiftc -DMOCHI_MEDIA_SUPPORTED -Xcc -DMOCHI_MEDIA_SUPPORTED
mochi-media = ["libmochi-bridge/mochi-media"]
testing-fns = ["libmochi-bridge/testing-fns"]

[dependencies]
libmochi-bridge = { path = "../shared", features = ["ffi"] }
libmochi-net = { path = "../../net" }
libmochi-protocol = { path = "../../protocol" }
mochi-media = { path = "../../media" }

futures-util = "0.3"
log = "0.4"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }

[target.aarch64-apple-ios.dependencies]
cpufeatures = "0.2.1" # Make sure iOS gets optimized crypto.
