#
# Copyright (C) 2023 Mochi Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "libmochi-protocol-cross-version-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
futures-util = "0.3.7"
log = "0.4"
rand = "0.8"
rand_v7 = { package = "rand", version = "0.7" }

libmochi-protocol-current = { path = "..", package = "libmochi-protocol" }
libmochi-protocol-v12 = { git = "https://github.com/mochimessenger/libmochi", tag = "v0.12.3", package = "libmochi-protocol" }
libmochi-protocol-v21 = { git = "https://github.com/mochimessenger/libmochi", tag = "v0.21.1", package = "libmochi-protocol" }

# Prevent this crate from being included in the top-level workspace
[workspace]
members = ["."]
