#
# Copyright 2020-2021 Mochi Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "mochi-neon-futures"
version = "0.1.0"
authors = ["Mochi Messenger LLC"]
license = "AGPL-3.0-only"
edition = "2021"

[[test]]
name = "mochi-neon-futures-tests"
path = "tests/node.rs"
harness = false

[[bench]]
name = "mochi-neon-futures-bench"
path = "benches/node.rs"
harness = false

[dependencies]
futures-util = "0.3.7"
neon = { version = "1.0.0", default-features = false, features = ["napi-4"] }

[dev-dependencies]
mochi-neon-futures-tests = { path = "tests-node-module" }

[features]
napi-6 = ["neon/napi-6"]
