#
# Copyright (C) 2020 Mochi Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

# This is a separate crate so we can run the Neon build script.

[package]
name = "mochi-neon-futures-tests"
version = "0.1.0"
authors = ["Mochi Messenger LLC"]
license = "AGPL-3.0-only"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mochi-neon-futures = { path = ".." }

futures-util = "0.3.7"
neon = { version = "1.0.0", default-features = false, features = ["napi-1"] }

[features]
# Enable default-panic-hook to get backtraces of panics.
default = []
default-panic-hook = []
